--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </a>
               </li>
                             <li class="list-inline-item">
-                <a href="https://scholar.google.com/citations?user=35RDM5kAAAAJ&amp;hl=en">
+                <a href="https://scholar.google.com/citations?user=35RDM5kAAAAJ&amp;hl=en/">
                   <button type="button" class="btn btn-outline-dark mb-2">
                     Google Scholar
                   </button>
@@ -78,10 +78,11 @@
       </div>
       <div class="row mb-5">
         <div class="col">
-          <div id="bio" class="section level2">
-          <h2>Bio</h2>
+          <div id="about-me" class="section level2">
+          <h2>About Me</h2>
           <p>I am a Geography PhD student in the School of Geography, Development &amp; Environment at the University of Arizona. My current research investigates the dynamics of human-environment relationships including urban growth, agriculture and food security in Africa. I am interested in the linkages between rural agricultural production and urban food security.</p>
           <p>Methodologically, much of my work focuses on the integration of social and environmental data, using GIS, spatial analysis, econometric and statistical modeling. I have conducted large-scale household surveys in both rural and urban settings in Kenya and Zambia, which form part of the dataset for my research. I couple these with various environmental and economic datasets to examine the environmental, socio-economic and spatial determinants of household food security within Southern Africa.</p>
+          <p>ABCDEFG</p>
           </div>
           <div id="education" class="section level2">
           <h2>Education</h2>
@@ -113,7 +114,7 @@
                       CV
                     </button>
                   </a>
-                                    <a href="https://scholar.google.com/citations?user=35RDM5kAAAAJ&amp;hl=en">
+                                    <a href="https://scholar.google.com/citations?user=35RDM5kAAAAJ&amp;hl=en/">
                     <button type="button" class="list-group-item list-group-item-action my-1 rounded" style="background-color: #f5e9dd; color: black;border-color: black;">
                       Google Scholar
                     </button>
@@ -132,10 +133,11 @@
               </div>
             </div>
             <div class="mt-4 mb-5 mx-2">
-              <div id="bio" class="section level2">
-              <h2>Bio</h2>
+              <div id="about-me" class="section level2">
+              <h2>About Me</h2>
               <p>I am a Geography PhD student in the School of Geography, Development &amp; Environment at the University of Arizona. My current research investigates the dynamics of human-environment relationships including urban growth, agriculture and food security in Africa. I am interested in the linkages between rural agricultural production and urban food security.</p>
               <p>Methodologically, much of my work focuses on the integration of social and environmental data, using GIS, spatial analysis, econometric and statistical modeling. I have conducted large-scale household surveys in both rural and urban settings in Kenya and Zambia, which form part of the dataset for my research. I couple these with various environmental and economic datasets to examine the environmental, socio-economic and spatial determinants of household food security within Southern Africa.</p>
+              <p>ABCDEFG</p>
               </div>
               <div id="education" class="section level2">
               <h2>Education</h2>
