--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
                   </button>
                 </a>
               </li>
+                            <li class="list-inline-item">
+                <a href="https://github.com/ZimmerMaps/">
+                  <button type="button" class="btn btn-outline-dark mb-2">
+                    Github
+                  </button>
+                </a>
+              </li>
                           </ul>
           </div>
         </div>
@@ -80,7 +87,8 @@
         <div class="col">
           <div id="about-me" class="section level2">
           <h2>About Me</h2>
-          <p>I am a Geography PhD student in the School of Geography, Development &amp; Environment at the University of Arizona. My current research investigates the dynamics of human-environment relationships including urban growth, agriculture and food security in Africa. I am interested in the linkages between rural agricultural production and urban food security.</p>
+          <p>👋 Hello! I am a Geography PhD candidate in the <a href="https://geography.arizona.edu/">School of Geography, Development &amp; Environment</a> at the University of Arizona, advised by <a href="http://www.tomgeog.org/">Tom Evans</a></p>
+          <p>My current research investigates the dynamics of human-environment relationships including urban growth, agriculture and food security in Africa. I am interested in the linkages between rural agricultural production and urban food security.</p>
           <p>Methodologically, much of my work focuses on the integration of social and environmental data, using GIS, spatial analysis, econometric and statistical modeling. I have conducted large-scale household surveys in both rural and urban settings in Kenya and Zambia, which form part of the dataset for my research. I couple these with various environmental and economic datasets to examine the environmental, socio-economic and spatial determinants of household food security within Southern Africa.</p>
           </div>
           <div id="education" class="section level2">
@@ -88,6 +96,11 @@
           <p><strong>PhD Geography</strong> | University of Arizona, USA</p>
           <p><strong>MSc Environmental Science &amp; Technology</strong> | Lancaster University, UK</p>
           <p><strong>BA Geography</strong> | Lancaster University, UK</p>
+          </div>
+          <div id="publications" class="section level2">
+          <h2>Publications</h2>
+          <p>Guido, Z., <strong>Zimmer, A.</strong>, Lopus, S., Hanah, C., Gower, D., Waldman, K., Krell, N., Sheffield, J., Caylor, K., Evans, T. (2020). Farmer forecasts: Impacts of seasonal rainfall expectations on agricultural decision-making in Sub-Saharan Africa. <em>Climate Risk Management</em>. <a href="./Publications/guido_2020_crm.pdf" target="_blank">[Download]</a></p>
+          <p><strong>Zimmer, A.</strong>, Guido, Z., Tuholske, C., Pakalniskis, A., Lopus, S., Caylor, K., Evans, T. (2020). Dynamics of population growth in secondary cities across southern Africa. <em>Landscape Ecology</em>. <a href="./Publications/zimmer_2020_le.pdf" target="_blank">[Download]</a></p>
           </div>
         </div>
       </div>
@@ -128,13 +141,19 @@
                       Twitter
                     </button>
                   </a>
+                                    <a href="https://github.com/ZimmerMaps/">
+                    <button type="button" class="list-group-item list-group-item-action my-1 rounded" style="background-color: #f5e9dd; color: black;border-color: black;">
+                      Github
+                    </button>
+                  </a>
                                   </div>
               </div>
             </div>
             <div class="mt-4 mb-5 mx-2">
               <div id="about-me" class="section level2">
               <h2>About Me</h2>
-              <p>I am a Geography PhD student in the School of Geography, Development &amp; Environment at the University of Arizona. My current research investigates the dynamics of human-environment relationships including urban growth, agriculture and food security in Africa. I am interested in the linkages between rural agricultural production and urban food security.</p>
+              <p>👋 Hello! I am a Geography PhD candidate in the <a href="https://geography.arizona.edu/">School of Geography, Development &amp; Environment</a> at the University of Arizona, advised by <a href="http://www.tomgeog.org/">Tom Evans</a></p>
+              <p>My current research investigates the dynamics of human-environment relationships including urban growth, agriculture and food security in Africa. I am interested in the linkages between rural agricultural production and urban food security.</p>
               <p>Methodologically, much of my work focuses on the integration of social and environmental data, using GIS, spatial analysis, econometric and statistical modeling. I have conducted large-scale household surveys in both rural and urban settings in Kenya and Zambia, which form part of the dataset for my research. I couple these with various environmental and economic datasets to examine the environmental, socio-economic and spatial determinants of household food security within Southern Africa.</p>
               </div>
               <div id="education" class="section level2">
@@ -142,6 +161,11 @@
               <p><strong>PhD Geography</strong> | University of Arizona, USA</p>
               <p><strong>MSc Environmental Science &amp; Technology</strong> | Lancaster University, UK</p>
               <p><strong>BA Geography</strong> | Lancaster University, UK</p>
+              </div>
+              <div id="publications" class="section level2">
+              <h2>Publications</h2>
+              <p>Guido, Z., <strong>Zimmer, A.</strong>, Lopus, S., Hanah, C., Gower, D., Waldman, K., Krell, N., Sheffield, J., Caylor, K., Evans, T. (2020). Farmer forecasts: Impacts of seasonal rainfall expectations on agricultural decision-making in Sub-Saharan Africa. <em>Climate Risk Management</em>. <a href="./Publications/guido_2020_crm.pdf" target="_blank">[Download]</a></p>
+              <p><strong>Zimmer, A.</strong>, Guido, Z., Tuholske, C., Pakalniskis, A., Lopus, S., Caylor, K., Evans, T. (2020). Dynamics of population growth in secondary cities across southern Africa. <em>Landscape Ecology</em>. <a href="./Publications/zimmer_2020_le.pdf" target="_blank">[Download]</a></p>
               </div>
             </div>
         </div>
