--- a/index.html
+++ b/index.html
@@ -61,13 +61,6 @@
                   </button>
                 </a>
               </li>
-                            <li class="list-inline-item">
-                <a href="https://twitter.com/ZimmerMaps/">
-                  <button type="button" class="btn btn-outline-dark mb-2">
-                    Twitter
-                  </button>
-                </a>
-              </li>
                           </ul>
           </div>
         </div>
@@ -89,8 +82,9 @@
           <div id="education" class="section level2">
           <h2>Education</h2>
           <p><strong>PhD Geography</strong> | University of Arizona, USA | 2018 - Present</p>
-          <p><strong>MSc Environmental Science &amp; Technology</strong> | Lancaster University, UK | 2016 - 2017</p>
-          <p><strong>BA Geography</strong> | Lancaster University, UK | 2013 - 2016</p>
+          <p><strong>MSc Environmental Science &amp; Technology</strong> | Lancaster University, UK | 2017</p>
+          <p><strong>BA Geography</strong> | Lancaster University, UK | 2013 - 2016<br />
+          Foreign Study at Oregon State University, 2014-2015</p>
           <p><br></p>
           </div>
           <div id="publications" class="section level2">
@@ -143,11 +137,6 @@
                       Email
                     </button>
                   </a>
-                                    <a href="https://twitter.com/ZimmerMaps/">
-                    <button type="button" class="list-group-item list-group-item-action my-1 rounded" style="background-color: #f5e9dd; color: black;border-color: black;">
-                      Twitter
-                    </button>
-                  </a>
                                   </div>
               </div>
             </div>
@@ -163,8 +152,9 @@
               <div id="education" class="section level2">
               <h2>Education</h2>
               <p><strong>PhD Geography</strong> | University of Arizona, USA | 2018 - Present</p>
-              <p><strong>MSc Environmental Science &amp; Technology</strong> | Lancaster University, UK | 2016 - 2017</p>
-              <p><strong>BA Geography</strong> | Lancaster University, UK | 2013 - 2016</p>
+              <p><strong>MSc Environmental Science &amp; Technology</strong> | Lancaster University, UK | 2017</p>
+              <p><strong>BA Geography</strong> | Lancaster University, UK | 2013 - 2016<br />
+              Foreign Study at Oregon State University, 2014-2015</p>
               <p><br></p>
               </div>
               <div id="publications" class="section level2">
