Add Research Tab

--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
                   </button>
                 </a>
               </li>
+                            <li class="list-inline-item">
+                <a href="research.html">
+                  <button type="button" class="btn btn-outline-dark mb-2">
+                    Research
+                  </button>
+                </a>
+              </li>
                           </ul>
           </div>
         </div>
@@ -135,6 +142,11 @@
                                     <a href="mailto:azimmer@email.arizona.edu">
                     <button type="button" class="list-group-item list-group-item-action my-1 rounded" style="background-color: #f5e9dd; color: black;border-color: black;">
                       Email
+                    </button>
+                  </a>
+                                    <a href="research.html">
+                    <button type="button" class="list-group-item list-group-item-action my-1 rounded" style="background-color: #f5e9dd; color: black;border-color: black;">
+                      Research
                     </button>
                   </a>
                                   </div>
