--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <li class="list-inline-item">
                 <a href="research.html">
                   <button type="button" class="btn btn-outline-dark mb-2">
-                    Research
+                    Projects
                   </button>
                 </a>
               </li>
@@ -146,7 +146,7 @@
                   </a>
                                     <a href="research.html">
                     <button type="button" class="list-group-item list-group-item-action my-1 rounded" style="background-color: #f5e9dd; color: black;border-color: black;">
-                      Research
+                      Projects
                     </button>
                   </a>
                                   </div>
