--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="col">
           <div id="about-me" class="section level2">
           <h2>About Me</h2>
-          <p>👋 Hello! I am a Geography PhD candidate in the <a href="https://geography.arizona.edu">School of Geography, Development &amp; Environment</a> at the University of Arizona under the advisement of <a href="http://www.tomgeog.org/">Tom Evans</a>.</p>
+          <p>👋 Hello! I am a Geography PhD candidate in the <a href="https://geography.arizona.edu">School of Geography, Development &amp; Environment</a> at the University of Arizona.</p>
           <p>My current research investigates the dynamics of human-environment relationships between agriculture, urban growth and food security in Africa. I am primarily interested in rural-urban linkages between agricultural production and urban food security.</p>
           <p>Methodologically, my work is interdisciplinary in nature. I mainly focus on the integration of social and environmental data using GIS and spatial analysis alongside econometric and statistical modelling. Much of the data I use comes from large-scale household surveys in both rural and urban settings across Sub-Saharan Africa. I work to couple these household level data with environmental and socio-economic data to examine and understand the spatial dynamics of food systems and food (in)security across southern Africa.</p>
           <p>For more information about my research, interests or potential collaboration, please get in touch.</p>
@@ -155,7 +155,7 @@
             <div class="mt-4 mb-5 mx-2">
               <div id="about-me" class="section level2">
               <h2>About Me</h2>
-              <p>👋 Hello! I am a Geography PhD candidate in the <a href="https://geography.arizona.edu">School of Geography, Development &amp; Environment</a> at the University of Arizona under the advisement of <a href="http://www.tomgeog.org/">Tom Evans</a>.</p>
+              <p>👋 Hello! I am a Geography PhD candidate in the <a href="https://geography.arizona.edu">School of Geography, Development &amp; Environment</a> at the University of Arizona.</p>
               <p>My current research investigates the dynamics of human-environment relationships between agriculture, urban growth and food security in Africa. I am primarily interested in rural-urban linkages between agricultural production and urban food security.</p>
               <p>Methodologically, my work is interdisciplinary in nature. I mainly focus on the integration of social and environmental data using GIS and spatial analysis alongside econometric and statistical modelling. Much of the data I use comes from large-scale household surveys in both rural and urban settings across Sub-Saharan Africa. I work to couple these household level data with environmental and socio-economic data to examine and understand the spatial dynamics of food systems and food (in)security across southern Africa.</p>
               <p>For more information about my research, interests or potential collaboration, please get in touch.</p>
