--- a/index.html
+++ b/index.html
@@ -97,17 +97,21 @@
           <div id="publications" class="section level2">
           <h2>Publications</h2>
           <div id="section" class="section level3">
-          <h3>2021</h3>
-          <p>Guido, Z, Lopus, S, Waldman, K, Hannah, C, <strong>Zimmer, A</strong>, Krell, N, Knudson, C, Estes, L, Caylor, K, Evans, T (2021). <strong>Perceived links between climate change and weather forecast accuracy: new barriers to tools for agricultural decision-making</strong>. <em>Climatic Change</em>. <a href="./Publications/guido_2021_cc.pdf" target="_blank">[Download]</a></p>
-          <p>Davies, J, Hannah, C, Guido, Z, <strong>Zimmer, A</strong>, McCann, L, Battersby, J, Evans, T (2021). <strong>Barriers to urban agriculture in Sub-Saharan Africa</strong>. <em>Food Policy</em>. <a href="./Publications/davies_2021_fp.pdf" target="_blank">[Download]</a></p>
-          <p>Mack, E, Bunting, E, Herndon, J, Marcantonio, R, Ross, A, <strong>Zimmer, A</strong> (2021). <strong>Conflict and its relationship to climate variability in Sub-Saharan Africa</strong>. <em>Science of The Total Environment</em>. <a href="./Publications/mack_2021_stoten.pdf" target="_blank">[Download]</a></p>
-          <p>Pearson, A, Mack, E, Ross, A, Marcantonio, R, <strong>Zimmer, A</strong>, Bunting, E, Smith, A, Miller, J, Evans, T (2021). <strong>Interpersonal Conflict over Water Is Associated With Household Demographiics, Domains of Water Insecurity, and Regional Conflict: Evidence from Nine Sites across Eight Sub-Saharan African Countries</strong>. <em>Water</em>. <a href="./Publications/pearson_2021_water.pdf" target="_blank">[Download]</a></p>
-          <p>Hannah, C, Giroux, S, Krell, S, Lopus, S, McCann, L, <strong>Zimmer, A</strong>, Caylor, K, Evans, T (2021). <strong>Has the vision of a gender quota rule been realized for community-based water management committees in Kenya?</strong>. <em>World Development</em>. <a href="./Publications/hannah_2021_wd.pdf">[Download]</a></p>
+          <h3>2022</h3>
+          <p>Hannah, C, Davies, J, Green, R, <strong>Zimmer, A</strong>, Anderson, P, Battersby, J, Baylis, K, Joshi, N, Evans, T (2022). Persistence of open-air markets in the food systems of Africa’s secondary cities. <em>Cities</em>. <a href="./Publications/hannah_2022_c.pdf" target="_blank">[Download]</a></p>
           </div>
           <div id="section-1" class="section level3">
+          <h3>2021</h3>
+          <p>Guido, Z, Lopus, S, Waldman, K, Hannah, C, <strong>Zimmer, A</strong>, Krell, N, Knudson, C, Estes, L, Caylor, K, Evans, T (2021). Perceived links between climate change and weather forecast accuracy: new barriers to tools for agricultural decision-making. <em>Climatic Change</em>. <a href="./Publications/guido_2021_cc.pdf" target="_blank">[Download]</a></p>
+          <p>Davies, J, Hannah, C, Guido, Z, <strong>Zimmer, A</strong>, McCann, L, Battersby, J, Evans, T (2021). Barriers to urban agriculture in Sub-Saharan Africa. <em>Food Policy</em>. <a href="./Publications/davies_2021_fp.pdf" target="_blank">[Download]</a></p>
+          <p>Mack, E, Bunting, E, Herndon, J, Marcantonio, R, Ross, A, <strong>Zimmer, A</strong> (2021). Conflict and its relationship to climate variability in Sub-Saharan Africa. <em>Science of The Total Environment</em>. <a href="./Publications/mack_2021_stoten.pdf" target="_blank">[Download]</a></p>
+          <p>Pearson, A, Mack, E, Ross, A, Marcantonio, R, <strong>Zimmer, A</strong>, Bunting, E, Smith, A, Miller, J, Evans, T (2021). Interpersonal Conflict over Water Is Associated With Household Demographiics, Domains of Water Insecurity, and Regional Conflict: Evidence from Nine Sites across Eight Sub-Saharan African Countries. <em>Water</em>. <a href="./Publications/pearson_2021_water.pdf" target="_blank">[Download]</a></p>
+          <p>Hannah, C, Giroux, S, Krell, S, Lopus, S, McCann, L, <strong>Zimmer, A</strong>, Caylor, K, Evans, T (2021). Has the vision of a gender quota rule been realized for community-based water management committees in Kenya?. <em>World Development</em>. <a href="./Publications/hannah_2021_wd.pdf">[Download]</a></p>
+          </div>
+          <div id="section-2" class="section level3">
           <h3>2020</h3>
-          <p><strong>Zimmer, A</strong>, Guido, Z, Tuholske, C, Pakalniskis, A, Lopus, S, Caylor, K, Evans, T (2020). <strong>Dynamics of population growth in secondary cities across southern Africa</strong>. <em>Landscape Ecology</em>. <a href="./Publications/zimmer_2020_le.pdf" target="_blank">[Download]</a></p>
-          <p>Guido, Z, <strong>Zimmer, A</strong>, Lopus, S, Hanah, C, Gower, D, Waldman, K, Krell, N, Sheffield, J, Caylor, K, Evans, T (2020). <strong>Farmer forecasts: Impacts of seasonal rainfall expectations on agricultural decision-making in Sub-Saharan Africa</strong>. <em>Climate Risk Management</em>. <a href="./Publications/guido_2020_crm.pdf" target="_blank">[Download]</a></p>
+          <p><strong>Zimmer, A</strong>, Guido, Z, Tuholske, C, Pakalniskis, A, Lopus, S, Caylor, K, Evans, T (2020). Dynamics of population growth in secondary cities across southern Africa. <em>Landscape Ecology</em>. <a href="./Publications/zimmer_2020_le.pdf" target="_blank">[Download]</a></p>
+          <p>Guido, Z, <strong>Zimmer, A</strong>, Lopus, S, Hanah, C, Gower, D, Waldman, K, Krell, N, Sheffield, J, Caylor, K, Evans, T (2020). Farmer forecasts: Impacts of seasonal rainfall expectations on agricultural decision-making in Sub-Saharan Africa. <em>Climate Risk Management</em>. <a href="./Publications/guido_2020_crm.pdf" target="_blank">[Download]</a></p>
           </div>
           </div>
         </div>
@@ -172,17 +176,21 @@
               <div id="publications" class="section level2">
               <h2>Publications</h2>
               <div id="section" class="section level3">
-              <h3>2021</h3>
-              <p>Guido, Z, Lopus, S, Waldman, K, Hannah, C, <strong>Zimmer, A</strong>, Krell, N, Knudson, C, Estes, L, Caylor, K, Evans, T (2021). <strong>Perceived links between climate change and weather forecast accuracy: new barriers to tools for agricultural decision-making</strong>. <em>Climatic Change</em>. <a href="./Publications/guido_2021_cc.pdf" target="_blank">[Download]</a></p>
-              <p>Davies, J, Hannah, C, Guido, Z, <strong>Zimmer, A</strong>, McCann, L, Battersby, J, Evans, T (2021). <strong>Barriers to urban agriculture in Sub-Saharan Africa</strong>. <em>Food Policy</em>. <a href="./Publications/davies_2021_fp.pdf" target="_blank">[Download]</a></p>
-              <p>Mack, E, Bunting, E, Herndon, J, Marcantonio, R, Ross, A, <strong>Zimmer, A</strong> (2021). <strong>Conflict and its relationship to climate variability in Sub-Saharan Africa</strong>. <em>Science of The Total Environment</em>. <a href="./Publications/mack_2021_stoten.pdf" target="_blank">[Download]</a></p>
-              <p>Pearson, A, Mack, E, Ross, A, Marcantonio, R, <strong>Zimmer, A</strong>, Bunting, E, Smith, A, Miller, J, Evans, T (2021). <strong>Interpersonal Conflict over Water Is Associated With Household Demographiics, Domains of Water Insecurity, and Regional Conflict: Evidence from Nine Sites across Eight Sub-Saharan African Countries</strong>. <em>Water</em>. <a href="./Publications/pearson_2021_water.pdf" target="_blank">[Download]</a></p>
-              <p>Hannah, C, Giroux, S, Krell, S, Lopus, S, McCann, L, <strong>Zimmer, A</strong>, Caylor, K, Evans, T (2021). <strong>Has the vision of a gender quota rule been realized for community-based water management committees in Kenya?</strong>. <em>World Development</em>. <a href="./Publications/hannah_2021_wd.pdf">[Download]</a></p>
+              <h3>2022</h3>
+              <p>Hannah, C, Davies, J, Green, R, <strong>Zimmer, A</strong>, Anderson, P, Battersby, J, Baylis, K, Joshi, N, Evans, T (2022). Persistence of open-air markets in the food systems of Africa’s secondary cities. <em>Cities</em>. <a href="./Publications/hannah_2022_c.pdf" target="_blank">[Download]</a></p>
               </div>
               <div id="section-1" class="section level3">
+              <h3>2021</h3>
+              <p>Guido, Z, Lopus, S, Waldman, K, Hannah, C, <strong>Zimmer, A</strong>, Krell, N, Knudson, C, Estes, L, Caylor, K, Evans, T (2021). Perceived links between climate change and weather forecast accuracy: new barriers to tools for agricultural decision-making. <em>Climatic Change</em>. <a href="./Publications/guido_2021_cc.pdf" target="_blank">[Download]</a></p>
+              <p>Davies, J, Hannah, C, Guido, Z, <strong>Zimmer, A</strong>, McCann, L, Battersby, J, Evans, T (2021). Barriers to urban agriculture in Sub-Saharan Africa. <em>Food Policy</em>. <a href="./Publications/davies_2021_fp.pdf" target="_blank">[Download]</a></p>
+              <p>Mack, E, Bunting, E, Herndon, J, Marcantonio, R, Ross, A, <strong>Zimmer, A</strong> (2021). Conflict and its relationship to climate variability in Sub-Saharan Africa. <em>Science of The Total Environment</em>. <a href="./Publications/mack_2021_stoten.pdf" target="_blank">[Download]</a></p>
+              <p>Pearson, A, Mack, E, Ross, A, Marcantonio, R, <strong>Zimmer, A</strong>, Bunting, E, Smith, A, Miller, J, Evans, T (2021). Interpersonal Conflict over Water Is Associated With Household Demographiics, Domains of Water Insecurity, and Regional Conflict: Evidence from Nine Sites across Eight Sub-Saharan African Countries. <em>Water</em>. <a href="./Publications/pearson_2021_water.pdf" target="_blank">[Download]</a></p>
+              <p>Hannah, C, Giroux, S, Krell, S, Lopus, S, McCann, L, <strong>Zimmer, A</strong>, Caylor, K, Evans, T (2021). Has the vision of a gender quota rule been realized for community-based water management committees in Kenya?. <em>World Development</em>. <a href="./Publications/hannah_2021_wd.pdf">[Download]</a></p>
+              </div>
+              <div id="section-2" class="section level3">
               <h3>2020</h3>
-              <p><strong>Zimmer, A</strong>, Guido, Z, Tuholske, C, Pakalniskis, A, Lopus, S, Caylor, K, Evans, T (2020). <strong>Dynamics of population growth in secondary cities across southern Africa</strong>. <em>Landscape Ecology</em>. <a href="./Publications/zimmer_2020_le.pdf" target="_blank">[Download]</a></p>
-              <p>Guido, Z, <strong>Zimmer, A</strong>, Lopus, S, Hanah, C, Gower, D, Waldman, K, Krell, N, Sheffield, J, Caylor, K, Evans, T (2020). <strong>Farmer forecasts: Impacts of seasonal rainfall expectations on agricultural decision-making in Sub-Saharan Africa</strong>. <em>Climate Risk Management</em>. <a href="./Publications/guido_2020_crm.pdf" target="_blank">[Download]</a></p>
+              <p><strong>Zimmer, A</strong>, Guido, Z, Tuholske, C, Pakalniskis, A, Lopus, S, Caylor, K, Evans, T (2020). Dynamics of population growth in secondary cities across southern Africa. <em>Landscape Ecology</em>. <a href="./Publications/zimmer_2020_le.pdf" target="_blank">[Download]</a></p>
+              <p>Guido, Z, <strong>Zimmer, A</strong>, Lopus, S, Hanah, C, Gower, D, Waldman, K, Krell, N, Sheffield, J, Caylor, K, Evans, T (2020). Farmer forecasts: Impacts of seasonal rainfall expectations on agricultural decision-making in Sub-Saharan Africa. <em>Climate Risk Management</em>. <a href="./Publications/guido_2020_crm.pdf" target="_blank">[Download]</a></p>
               </div>
               </div>
             </div>
