--- a/index.html
+++ b/index.html
@@ -136,6 +136,11 @@ document.addEventListener('DOMContentLoaded', function(e) {
           <h2>Publications</h2>
           <div id="section" class="section level3">
           <h3>2022</h3>
+          <p>Davies, J, Blekking, J, Hannah, C, <strong>Zimmer,
+          A</strong>, Joshi, N, Anderson, P, Chilenga, A, Evans, T
+          (2022). Governance of traditional markets and rural-urban food
+          systems in sub-Saharan Africa. <em>Habitat International</em>.
+          <a href="./Publications/davies_2022_hi.pdf" target="_blank">[Download]</a></p>
           <p>Hannah, C, Davies, J, Green, R, <strong>Zimmer, A</strong>,
           Anderson, P, Battersby, J, Baylis, K, Joshi, N, Evans, T
           (2022). Persistence of open-air markets in the food systems of
@@ -262,6 +267,11 @@ document.addEventListener('DOMContentLoaded', function(e) {
               <h2>Publications</h2>
               <div id="section" class="section level3">
               <h3>2022</h3>
+              <p>Davies, J, Blekking, J, Hannah, C, <strong>Zimmer,
+              A</strong>, Joshi, N, Anderson, P, Chilenga, A, Evans, T
+              (2022). Governance of traditional markets and rural-urban
+              food systems in sub-Saharan Africa. <em>Habitat
+              International</em>. <a href="./Publications/davies_2022_hi.pdf" target="_blank">[Download]</a></p>
               <p>Hannah, C, Davies, J, Green, R, <strong>Zimmer,
               A</strong>, Anderson, P, Battersby, J, Baylis, K, Joshi,
               N, Evans, T (2022). Persistence of open-air markets in the
