--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ document.addEventListener('DOMContentLoaded', function(e) {
                 </a>
               </li>
                             <li class="list-inline-item">
-                <a href="mailto:azimmer@email.arizona.edu">
+                <a href="mailto:azimmer@arizona.edu">
                   <button type="button" class="btn btn-outline-dark mb-2">
                     Email
                   </button>
@@ -214,7 +214,7 @@ document.addEventListener('DOMContentLoaded', function(e) {
                       Google Scholar
                     </button>
                   </a>
-                                    <a href="mailto:azimmer@email.arizona.edu">
+                                    <a href="mailto:azimmer@arizona.edu">
                     <button type="button" class="list-group-item list-group-item-action my-1 rounded" style="background-color: #f5e9dd; color: black;border-color: black;">
                       Email
                     </button>
