--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@ document.addEventListener('DOMContentLoaded', function(e) {
           <p>I am a Geography PhD candidate in the <a href="https://geography.arizona.edu">School of Geography,
           Development &amp; Environment</a> at the University of
           Arizona.<br />
-          My current research investigates the dynamics of
+          <br> My current research investigates the dynamics of
           human-environment relationships between agriculture, urban
           growth and food security in Africa. I am primarily interested
           in rural-urban linkages between agricultural production and
           urban food security.<br />
-          Methodologically, my work is interdisciplinary in nature. I
-          mainly focus on the integration of social and environmental
+          <br> Methodologically, my work is interdisciplinary in nature.
+          I mainly focus on the integration of social and environmental
           data using GIS and spatial analysis alongside econometric and
           statistical modelling. Much of the data I use comes from
           large-scale household surveys in both rural and urban settings
@@ -117,8 +117,8 @@ document.addEventListener('DOMContentLoaded', function(e) {
           level data with environmental and socio-economic data to
           examine and understand the spatial dynamics of food systems
           and food (in)security across southern Africa.<br />
-          For more information about my research, interests or potential
-          collaboration, please get in touch. <br></p>
+          <br> For more information about my research, interests or
+          potential collaboration, please get in touch. <br></p>
           </div>
           <div id="education" class="section level2">
           <h2>Education</h2>
@@ -236,13 +236,13 @@ document.addEventListener('DOMContentLoaded', function(e) {
               <p>I am a Geography PhD candidate in the <a href="https://geography.arizona.edu">School of Geography,
               Development &amp; Environment</a> at the University of
               Arizona.<br />
-              My current research investigates the dynamics of
+              <br> My current research investigates the dynamics of
               human-environment relationships between agriculture, urban
               growth and food security in Africa. I am primarily
               interested in rural-urban linkages between agricultural
               production and urban food security.<br />
-              Methodologically, my work is interdisciplinary in nature.
-              I mainly focus on the integration of social and
+              <br> Methodologically, my work is interdisciplinary in
+              nature. I mainly focus on the integration of social and
               environmental data using GIS and spatial analysis
               alongside econometric and statistical modelling. Much of
               the data I use comes from large-scale household surveys in
@@ -251,7 +251,7 @@ document.addEventListener('DOMContentLoaded', function(e) {
               environmental and socio-economic data to examine and
               understand the spatial dynamics of food systems and food
               (in)security across southern Africa.<br />
-              For more information about my research, interests or
+              <br> For more information about my research, interests or
               potential collaboration, please get in touch. <br></p>
               </div>
               <div id="education" class="section level2">
