--- a/publications.html
+++ b/publications.html
@@ -79,6 +79,12 @@ document.addEventListener('DOMContentLoaded', function(e) {
         <div class="col">
           <div id="section" class="section level3">
           <h3>2022</h3>
+          <p>Mack, EA, Marcantonio, RA, Bunting, E, Ross, A,
+          <strong>Zimmer, A</strong>, Zulu, LC, Gómez Fernández, EL,
+          Herndon, J, Henebry, GM (2022). A Systematic Literature Review
+          of Quantitative Studies Assessing the Relatiosnhip between
+          Water and Conflict on the African Continent.
+          <em>Sustainability</em>. <a href="./Publications/mack_2022_sustainability.pdf" target="_blank">[Download]</a></p>
           <p><strong>Zimmer, A</strong>, Guido, Z, Davies, J, Joshi, N,
           Chilenga, A, Evans, T (2022). Food systems and rural-urban
           linkages in African secondary cities. <em>Urban
@@ -125,7 +131,7 @@ document.addEventListener('DOMContentLoaded', function(e) {
           Pakalniskis, A, Lopus, S, Caylor, K, Evans, T (2020). Dynamics
           of population growth in secondary cities across southern
           Africa. <em>Landscape Ecology</em>. <a href="./Publications/zimmer_2020_le.pdf" target="_blank">[Download]</a></p>
-          <p>Guido, Z, <strong>Zimmer, A</strong>, Lopus, S, Hanah, C,
+          <p>Guido, Z, <strong>Zimmer, A</strong>, Lopus, S, Hannah, C,
           Gower, D, Waldman, K, Krell, N, Sheffield, J, Caylor, K,
           Evans, T (2020). Farmer forecasts: Impacts of seasonal
           rainfall expectations on agricultural decision-making in
@@ -161,6 +167,12 @@ document.addEventListener('DOMContentLoaded', function(e) {
             <div class="mt-4 mb-5 mx-2">
               <div id="section" class="section level3">
               <h3>2022</h3>
+              <p>Mack, EA, Marcantonio, RA, Bunting, E, Ross, A,
+              <strong>Zimmer, A</strong>, Zulu, LC, Gómez Fernández, EL,
+              Herndon, J, Henebry, GM (2022). A Systematic Literature
+              Review of Quantitative Studies Assessing the Relatiosnhip
+              between Water and Conflict on the African Continent.
+              <em>Sustainability</em>. <a href="./Publications/mack_2022_sustainability.pdf" target="_blank">[Download]</a></p>
               <p><strong>Zimmer, A</strong>, Guido, Z, Davies, J, Joshi,
               N, Chilenga, A, Evans, T (2022). Food systems and
               rural-urban linkages in African secondary cities.
@@ -211,7 +223,7 @@ document.addEventListener('DOMContentLoaded', function(e) {
               Pakalniskis, A, Lopus, S, Caylor, K, Evans, T (2020).
               Dynamics of population growth in secondary cities across
               southern Africa. <em>Landscape Ecology</em>. <a href="./Publications/zimmer_2020_le.pdf" target="_blank">[Download]</a></p>
-              <p>Guido, Z, <strong>Zimmer, A</strong>, Lopus, S, Hanah,
+              <p>Guido, Z, <strong>Zimmer, A</strong>, Lopus, S, Hannah,
               C, Gower, D, Waldman, K, Krell, N, Sheffield, J, Caylor,
               K, Evans, T (2020). Farmer forecasts: Impacts of seasonal
               rainfall expectations on agricultural decision-making in
