--- a/index.html
+++ b/index.html
@@ -20,16 +20,15 @@ src: url(data:font/ttf;base64,AAEAAAAOAIAAAwBgR1NVQpLvgeIAATQUAAAANk9TLzKXt8F0AA
     <style type="text/css">body {font-family: 'Roboto Mono', serif;}</style>
 
     <style>
-      @media screen and (min-width: 768px) {
-        .container {
-          width: 768px;
-        }
-      }
-
-      body {
-        background-color: #f5e9dd;
-      }
-    </style>
+@media screen and (min-width: 768px) {
+.container {
+width: 768px;
+}
+}
+body {
+background-color: #f5e9dd;
+}
+</style>
 
     <title>Andrew Zimmer</title>
 
@@ -75,7 +74,7 @@ document.addEventListener('DOMContentLoaded', function(e) {
                 </a>
               </li>
                             <li class="list-inline-item">
-                <a href="mailto:azimmer@arizona.edu">
+                <a href="mailto:andrew.zimmer1@montana.edu">
                   <button type="button" class="btn btn-outline-dark mb-2">
                     Email
                   </button>
@@ -89,7 +88,7 @@ document.addEventListener('DOMContentLoaded', function(e) {
                 </a>
               </li>
                             <li class="list-inline-item">
-                <a href="https://scholar.google.com/citations?user=35RDM5kAAAAJ&amp;hl=en/">
+                <a href="https://scholar.google.com/citations?user=1-Xk5zMAAAAJ&amp;hl=en">
                   <button type="button" class="btn btn-outline-dark mb-2">
                     Google Scholar
                   </button>
@@ -107,25 +106,19 @@ document.addEventListener('DOMContentLoaded', function(e) {
         <div class="col">
           <div id="about-me" class="section level2">
           <h2>About Me</h2>
-          <p>I am a Geography PhD candidate in the <a href="https://geography.arizona.edu">School of Geography,
-          Development &amp; Environment</a> at the University of
-          Arizona.<br />
-          <br> My current research investigates the dynamics of
-          human-environment relationships between agriculture, urban
-          growth and food security in Africa. I am primarily interested
-          in rural-urban linkages between agricultural production and
-          urban food security.<br />
-          <br> Methodologically, my work is interdisciplinary in nature.
-          I mainly focus on the integration of social and environmental
+          <p>I am a postdoctoral researcher in the <a href="https://www.montana.edu/earthsciences/">Department of
+          Earth Sciences</a> at Montana State University <br> My current
+          research investigates the dynamics of human-environment
+          relationships between urban growth, demographic change,
+          extreme heat and food security in Africa <br>
+          Methodologically, my work in interdisciplinary in nature. I
+          mainly focus on the integration of social and environmental
           data using GIS and spatial analysis alongside econometric and
-          statistical modelling. Much of the data I use comes from
-          large-scale household surveys in both rural and urban settings
-          across Sub-Saharan Africa. I work to couple these household
-          level data with environmental and socio-economic data to
-          examine and understand the spatial dynamics of food systems
-          and food (in)security across southern Africa.<br />
-          <br> For more information about my research, interests or
-          potential collaboration, please get in touch. <br></p>
+          statistical modelling. Much of the data I use is derrived from
+          satellites, where I integrate them with large-scale household
+          surveys in both rural and urban settings. <br> For more
+          information about my research, interests or potential
+          collaboration, please get in touch. <br></p>
           </div>
         </div>
       </div>
@@ -156,7 +149,7 @@ document.addEventListener('DOMContentLoaded', function(e) {
                       Publications
                     </button>
                   </a>
-                                    <a href="mailto:azimmer@arizona.edu">
+                                    <a href="mailto:andrew.zimmer1@montana.edu">
                     <button type="button" class="list-group-item list-group-item-action my-1 rounded" style="background-color: #f5e9dd; color: black;border-color: black;">
                       Email
                     </button>
@@ -166,7 +159,7 @@ document.addEventListener('DOMContentLoaded', function(e) {
                       CV
                     </button>
                   </a>
-                                    <a href="https://scholar.google.com/citations?user=35RDM5kAAAAJ&amp;hl=en/">
+                                    <a href="https://scholar.google.com/citations?user=1-Xk5zMAAAAJ&amp;hl=en">
                     <button type="button" class="list-group-item list-group-item-action my-1 rounded" style="background-color: #f5e9dd; color: black;border-color: black;">
                       Google Scholar
                     </button>
@@ -177,26 +170,20 @@ document.addEventListener('DOMContentLoaded', function(e) {
             <div class="mt-4 mb-5 mx-2">
               <div id="about-me" class="section level2">
               <h2>About Me</h2>
-              <p>I am a Geography PhD candidate in the <a href="https://geography.arizona.edu">School of Geography,
-              Development &amp; Environment</a> at the University of
-              Arizona.<br />
-              <br> My current research investigates the dynamics of
-              human-environment relationships between agriculture, urban
-              growth and food security in Africa. I am primarily
-              interested in rural-urban linkages between agricultural
-              production and urban food security.<br />
-              <br> Methodologically, my work is interdisciplinary in
-              nature. I mainly focus on the integration of social and
+              <p>I am a postdoctoral researcher in the <a href="https://www.montana.edu/earthsciences/">Department
+              of Earth Sciences</a> at Montana State University <br> My
+              current research investigates the dynamics of
+              human-environment relationships between urban growth,
+              demographic change, extreme heat and food security in
+              Africa <br> Methodologically, my work in interdisciplinary
+              in nature. I mainly focus on the integration of social and
               environmental data using GIS and spatial analysis
               alongside econometric and statistical modelling. Much of
-              the data I use comes from large-scale household surveys in
-              both rural and urban settings across Sub-Saharan Africa. I
-              work to couple these household level data with
-              environmental and socio-economic data to examine and
-              understand the spatial dynamics of food systems and food
-              (in)security across southern Africa.<br />
-              <br> For more information about my research, interests or
-              potential collaboration, please get in touch. <br></p>
+              the data I use is derrived from satellites, where I
+              integrate them with large-scale household surveys in both
+              rural and urban settings. <br> For more information about
+              my research, interests or potential collaboration, please
+              get in touch. <br></p>
               </div>
             </div>
         </div>
